--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,7 @@
       "js": ["contentScript.bundle.js"]
     }
   ],
+  "devtools_page": "devtools.html",
   "icons": {
     "16": "img/icon-16.png",
     "48": "img/icon-48.png",
