--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.bundle.js"]
+      "js": ["inject-script.js"]
     }
   ],
   "devtools_page": "devtools.html",
@@ -24,5 +24,8 @@
     "128": "img/icon-128.png"
   },
   "permissions": ["tabs","activeTab"],
+  "web_accessible_resources": [
+    "contentScript.bundle.js"
+  ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
