--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-json-tree": "^0.6.11",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.0.3",
@@ -55,6 +56,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.0",
+    "react-json-tree": "^0.11.2",
     "resolve": "1.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
