--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-json-tree": "^0.6.11",
+    "@types/react-inspector": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.0.3",
@@ -56,7 +56,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.0",
-    "react-json-tree": "^0.11.2",
+    "react-inspector": "^4.0.1",
     "resolve": "1.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
@@ -75,7 +75,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,scss,css}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -146,5 +147,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
   }
 }
