--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scriptLoader.bundle.js"]
+      "js": ["scriptInjector.bundle.js"]
     }
   ],
   "devtools_page": "devtools.html",
