Add color picker

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-inspector": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
@@ -55,6 +56,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.5",
+    "react-color": "^2.18.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.0",
     "react-inspector": "^4.0.1",
