--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "re-resizable": "^6.2.0",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.5",
     "react-color": "^2.18.0",
