--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
-  "version": "0.0.1",
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "description": "Sample application showing how to create an extension with Create React App",
+  "version": "1.0.0",
+  "short_name": "ConsoleOverlay",
+  "name": "Console Overlay",
+  "description": "Show overlay of console output in page",
   "browser_action": {
-    "default_title": "CRE",
+    "default_title": "ConsoleOverlay",
     "default_popup": "popup.html"
   },
   "background": {
@@ -19,9 +19,9 @@
   ],
   "devtools_page": "devtools.html",
   "icons": {
-    "16": "img/icon-16.png",
-    "48": "img/icon-48.png",
-    "128": "img/icon-128.png"
+    "16": "img/iconfinder-16.png",
+    "48": "img/iconfinder-48.png",
+    "128": "img/iconfinder-128.png"
   },
   "permissions": ["tabs","activeTab", "storage"],
   "web_accessible_resources": [
